new discord logo hover effects

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 ---
 layout: default
 title: bewu.ga
-name: index
 description: hej, jestem bewu aka bewuwy, jestem komputerświrem. no i to jest moja strona
 head_include: script_index.html
 ---
@@ -13,29 +12,34 @@ head_include: script_index.html
     <h1>bewu</h1>
     <p>tak, to ja, bewu</p>
 
-    <p>
-      <img src="assets/icons/discord.svg" alt="Discord" width="auto" height="22" class="icon">
-      <a href="https://discord.com" rel="noreferrer" target="_blank">bewu#0764</a>
+    <p class="iconbox">
+      <a href="https://discord.com" rel="noreferrer" target="_blank">
+      <img src="assets/icons/discord.svg" alt="Discord" width="auto" height="30">
+      bewu#0764</a>
     </p>
 
-    <p>
-      <img src="assets/icons/github.svg" alt="Github" width="auto" height="30" class="icon">
-      <a href="https://github.com/bewuwy" rel="noreferrer" target="_blank">bewuwy</a>
+    <p class="iconbox">
+      <a href="https://github.com/bewuwy" rel="noreferrer" target="_blank">
+      <img src="assets/icons/github.svg" alt="Github" width="auto" height="30">
+      bewuwy</a>
     </p>
 
-    <p>
-      <img src="assets/icons/yt.svg" alt="YouTube" width="auto" height="30" class="icon">
-      <a href="https://www.youtube.com/channel/UCtu5KoWQvYRerzfRT5YYLlw/" rel="noreferrer" target="_blank">bewuwy</a>
+    <p class="iconbox">
+      <a href="https://www.youtube.com/channel/UCtu5KoWQvYRerzfRT5YYLlw/" rel="noreferrer" target="_blank">
+      <img src="assets/icons/yt.svg" alt="YouTube" width="auto" height="30">
+      bewuwy</a>
     </p>
 
-    <p>
-      <img src="assets/icons/steam.svg" alt="Steam" width="auto" height="30" class="icon">
-      <a href="https://steamcommunity.com/id/bewuwy/" rel="noreferrer" target="_blank">bewu</a>
+    <p class="iconbox">
+      <a href="https://steamcommunity.com/id/bewuwy/" rel="noreferrer" target="_blank">
+      <img src="assets/icons/steam.svg" alt="Steam" width="auto" height="30">
+      bewu</a>
     </p>
 
-    <p>
-      <img src="assets/icons/mc.svg" alt="Minecraft" width="auto" height="30" class="icon">
-      <a href="https://mine.ly/b3wu.1" rel="noreferrer" target="_blank">b3wu</a>
+    <p class="iconbox">
+      <a href="https://mine.ly/b3wu.1" rel="noreferrer" target="_blank">
+      <img src="assets/icons/mc.svg" alt="Minecraft" width="auto" height="30">
+      b3wu</a>
     </p>
 
     {% include arrow.html title="o mnie" moveto="#about" %}
@@ -55,7 +59,7 @@ head_include: script_index.html
   </div>
 </div>
 
-<div class="banner" id="projects">
+<div id="projects">
   <div class="center">
       <h2>moje projekty</h2>
       <p class="f16">większość moich projektów napisałem w Pythonie i nie obchodzi mnie, że jest wolny</p>
