--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@ head_include: script_index.html
     <h2>hej, jestem bewu</h2>
     <img src="assets/picrew/asking.webp" alt="bewu asking" style="height: 25vh; width: auto;" width="600" height="600">
     <p>kim jestem?</p>
-    <p class="f16">dobre pytanie, jestem bewu.</p>
-    <p class="f16">co to znaczy być bewu? lol nie wiem</p>
-    <p class="f16">ale umiem klikać w komputer i zrobiłem pare projektów</p>
+    <p class="f16">świetnie, że pytasz: jestem bewu.</p>
+    <p class="f16">co to znaczy, że jestem bewu?</p>
+    <p class="f16">umiem klikać w komputer, no i zrobiłem parę projektów.</p>
 
     {% include arrow.html title="moje projekty" moveto="#projects" %}
   </div>
