.dev letss gooo

--- a/days.html
+++ b/days.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: bewu.ga
+title: bewu.dev
 description: hej, jestem bewu aka weebuwy, a tyle dni zmarnowałem :D
 nofooter: true
 ---
