--- a/faq.html
+++ b/faq.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: bewu.ga | FAQ
+title: bewu.dev | FAQ
 description: często zadawane pytania (FAQ) o stronie bewu.ga oraz bewu
 questions:
   - q: Dlaczego istnieje sekcja FAQ?
