--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: bewu.ga
+title: bewu.dev
 description: hej, jestem bewu aka bewuwy, jestem komputerświrem. no i to jest moja strona
 head_include: script_index.html
 ---
