--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: bewu.ga | projekty
+title: bewu.dev | projekty
 description: hej, jestem bewu, a to są moje projekty
 head_include: script_projects.html
 
