--- a/index.html
+++ b/index.html
@@ -9,38 +9,22 @@ head_include: script_index.html
   {% include logo.html %}
 
   <div class="center">
+    <img src="/assets/pfp/pfp-neon.webp" class="pfp">
     <h1>bewu</h1>
-    <p>tak, to ja, bewu</p>
 
-    <p class="iconbox">
-      <a href="https://discord.com" rel="noreferrer" target="_blank">
-      <img src="assets/icons/discord.svg" alt="Discord" width="auto" height="30">
-      bewu#0764</a>
-    </p>
+    <div class="iconbox">
+      <a href="https://github.com/bewuwy" title="bewuwy" rel="noreferrer" target="_blank">
+      <img src="assets/icons/github.svg" alt="Github" width="auto" height="30"></a>
 
-    <p class="iconbox">
-      <a href="https://github.com/bewuwy" rel="noreferrer" target="_blank">
-      <img src="assets/icons/github.svg" alt="Github" width="auto" height="30">
-      bewuwy</a>
-    </p>
+      <a href="https://www.youtube.com/channel/UCtu5KoWQvYRerzfRT5YYLlw/" title="bewuwy" rel="noreferrer" target="_blank">
+      <img src="assets/icons/yt.svg" alt="YouTube" width="auto" height="30"></a>
 
-    <p class="iconbox">
-      <a href="https://www.youtube.com/channel/UCtu5KoWQvYRerzfRT5YYLlw/" rel="noreferrer" target="_blank">
-      <img src="assets/icons/yt.svg" alt="YouTube" width="auto" height="30">
-      bewuwy</a>
-    </p>
+      <a href="https://steamcommunity.com/id/bewuwy/" title="bewu" rel="noreferrer" target="_blank">
+      <img src="assets/icons/steam.svg" alt="Steam" width="auto" height="30"></a>
 
-    <p class="iconbox">
-      <a href="https://steamcommunity.com/id/bewuwy/" rel="noreferrer" target="_blank">
-      <img src="assets/icons/steam.svg" alt="Steam" width="auto" height="30">
-      bewu</a>
-    </p>
-
-    <p class="iconbox">
-      <a href="https://mine.ly/b3wu.1" rel="noreferrer" target="_blank">
-      <img src="assets/icons/mc.svg" alt="Minecraft" width="auto" height="30">
-      b3wu</a>
-    </p>
+      <a href="https://mine.ly/b3wu.1" title="b3wu" rel="noreferrer" target="_blank">
+      <img src="assets/icons/mc.svg" alt="Minecraft" width="auto" height="30"></a>
+    </div>
 
     {% include arrow.html title="o mnie" moveto="#about" %}
   </div>
@@ -48,8 +32,8 @@ head_include: script_index.html
 
 <div class="banner" id="about">
   <div class="center">
-    <h2>hej, jestem bewu</h2>
-    <img src="assets/picrew/asking.webp" alt="bewu asking" style="height: 25vh; width: auto;" width="600" height="600">
+    <h2>siema, jestem bewu</h2>
+    <img src="assets/pfp/asking.webp" alt="bewu asking" style="height: 25vh; width: auto;" width="600" height="600">
     <p>kim jestem?</p>
     <p class="f16">świetnie, że pytasz: jestem bewu.</p>
     <p class="f16">co to znaczy, że jestem bewu?</p>
@@ -59,14 +43,12 @@ head_include: script_index.html
   </div>
 </div>
 
-<div id="projects">
+<div id="projects" style="height: 80vh;">
   <div class="center">
       <h2>moje projekty</h2>
       <p class="f16">większość moich projektów napisałem w Pythonie i nie obchodzi mnie, że jest wolny</p>
-      <p class="f16">no i oprócz tego znam jeszcze podstawy Javy, prawie podstawy C++, trochę HTML, Javascripta i CSS</p>
+      <p class="f16">no i oprócz tego znam jeszcze podstawy Javy, C#, prawie C++, HTMLa, Javascripta i CSS</p>
       <p class="f16">umiem jeszcze kopiować kod z stackoverflow</p>
       <p class="f16"><a href="/projects" rel="next" alt="Projects">moje projekty</a></p>
-
-      {% include arrow.html title="koniec" moveto="#footer" %}
   </div>
 </div>
