fixed domain name

--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title : bewu.dev | not found
-description: bewu.ga | page not found
+description: bewu.dev | page not found
 ---
 
 <div class="center">
