--- a/faq.html
+++ b/faq.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: bewu.dev | FAQ
-description: często zadawane pytania (FAQ) o stronie bewu.ga oraz bewu
+description: często zadawane pytania (FAQ) o stronie bewu.dev oraz bewu
 questions:
   - q: Dlaczego istnieje sekcja FAQ?
     a: Po to, żeby odpowiedzieć na wszystkie nurtujące pytania.
