--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: bewu.dev
-description: hej, jestem bewu aka bewuwy, jestem komputerświrem. no i to jest moja strona
+description: hej, jestem bewu aka bewuwy, jestem komputerświrem. no, i to jest moja strona bewu.dev
 head_include: script_index.html
 ---
 
