--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: bewu.dev | projekty
-description: hej, jestem bewu, a to są moje projekty
+description: hej, jestem bewu, a to są moje projekty na githubie
 head_include: script_projects.html
 
 github_user: bewuwy
