--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@ description: hej, jestem bewu aka bewuwy, jestem komputerświrem. no, i to jest 
 head_include: script_index.html
 ---
 
+{% include nav.html title="start()" %}
 <div class="banner" id="start">
-  {% include logo.html %}
-
   <div class="center">
-    <img src="/assets/pfp/pfp-neon.webp" class="pfp">
+    <img src="/assets/pfp/pfp-neon.webp" class="pfp" alt="bewu icon">
     <h1>bewu</h1>
 
     <div class="iconbox">
