--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@ repositories:
   - YIAY-us-discord-bot
 ---
 
-{% include logo.html %}
+{% include nav.html title="projects()" %}
 
 <div class="center" style="margin: 15%; margin-top: 1%; margin-bottom: 1%; width: 70%;">
   <h1>moje projekty</h1>
