--- a/faq.html
+++ b/faq.html
@@ -21,7 +21,7 @@ questions:
 head_include: script_faq.html
 ---
 
-{% include logo.html %}
+{% include nav.html title="faq()" %}
 <div class="center">
   <h1>FAQ</h1>
   <h2>często zadawane pytania o tej stronie oraz bewu</h2>
