added discord link

--- a/index.html
+++ b/index.html
@@ -38,17 +38,20 @@ head_include: script_index.html
     </script>
 
     <div class="iconbox">
+      <a href="https://discord.com/users/548533107914047491" title="bewu#0764" rel="noreferrer" target="_blank">
+      <img src="assets/icons/discord.svg" alt="Discord"></a>
+
       <a href="https://github.com/bewuwy" title="bewuwy" rel="noreferrer" target="_blank">
-      <img src="assets/icons/github.svg" alt="Github" width="auto" height="30"></a>
+      <img src="assets/icons/github.svg" alt="Github"></a>
 
       <a href="https://www.youtube.com/channel/UCtu5KoWQvYRerzfRT5YYLlw/" title="bewuwy" rel="noreferrer" target="_blank">
-      <img src="assets/icons/yt.svg" alt="YouTube" width="auto" height="30"></a>
+      <img src="assets/icons/yt.svg" alt="YouTube"></a>
 
       <a href="https://steamcommunity.com/id/bewuwy/" title="bewu" rel="noreferrer" target="_blank">
-      <img src="assets/icons/steam.svg" alt="Steam" width="auto" height="30"></a>
+      <img src="assets/icons/steam.svg" alt="Steam"></a>
 
       <a href="https://mine.ly/b3wu.1" title="b3wu" rel="noreferrer" target="_blank">
-      <img src="assets/icons/mc.svg" alt="Minecraft" width="auto" height="30"></a>
+      <img src="assets/icons/mc.svg" alt="Minecraft"></a>
     </div>
 
     {% include arrow.html title="o mnie" moveto="#about" %}
