added arrow up effect

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: bewu.dev
-description: hej, jestem bewu aka bewuwy, jestem komputerświrem. no, i to jest moja strona bewu.dev
+description: bewu
 head_include: script_index.html
 ---
 
@@ -12,7 +12,7 @@ head_include: script_index.html
   <!--   <div id='img-wrap'> -->
   <img id='img' src="https://bewu.dev/assets/pfp/pfp-neon.webp">
 
-  <div class="iconbox hide" id='socials'>
+  <div class="hide" id='socials'>
     <a href="https://discord.com/users/548533107914047491" title="bewu#0764" rel="noreferrer" target="_blank">
       <img src="https://raw.githubusercontent.com/bewuwy/bewuwy/main/assets/icons/discord.svg" alt="Discord"></a>
 
