--- a/index.html
+++ b/index.html
@@ -2,42 +2,46 @@
 layout: default
 title: bewu.dev
 description: bewu
-head_include: script_index.html
+head_include: head_index.html
 ---
 
-<div class="page stay" id='page1'>
-  <span class='title' id='title'>I'm a <span class='color'>dev</span>, that<span class='subtitle hide-display'
-      id='sub1'>'s it sadly</span><span class='subtitle' id='sub2'>...</span></span>
 
-  <!--   <div id='img-wrap'> -->
-  <img id='img' src="https://bewu.dev/assets/pfp/pfp-neon.webp">
-
-  <div class="hide" id='socials'>
-    <a href="https://discord.com/users/548533107914047491" title="bewu#0764" rel="noreferrer" target="_blank">
-      <img src="https://raw.githubusercontent.com/bewuwy/bewuwy/main/assets/icons/discord.svg" alt="Discord"></a>
-
-    <a href="https://github.com/bewuwy" title="bewuwy" rel="noreferrer" target="_blank">
-      <img src="https://raw.githubusercontent.com/bewuwy/bewuwy/main/assets/icons/github.svg" alt="Github"></a>
-
-    <a href="https://www.youtube.com/channel/UCtu5KoWQvYRerzfRT5YYLlw/" title="bewuwy" rel="noreferrer" target="_blank">
-      <img src="https://raw.githubusercontent.com/bewuwy/bewuwy/main/assets/icons/yt.svg" alt="YouTube"></a>
-
-    <a href="https://steamcommunity.com/id/bewuwy/" title="bewu" rel="noreferrer" target="_blank">
-      <img src="https://raw.githubusercontent.com/bewuwy/bewuwy/main/assets/icons/steam.svg" alt="Steam"></a>
-
-    <a href="https://mine.ly/b3wu.1" title="b3wu" rel="noreferrer" target="_blank">
-      <img src="https://raw.githubusercontent.com/bewuwy/bewuwy/main/assets/icons/mc.svg" alt="Minecraft"></a>
-  </div>
-  <!--   </div> img wrap -->
-
-  <svg class='page-bottom' id='arrow' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-    <!-- Font Awesome Pro 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
-    <path fill='white'
-      d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z" />
-  </svg>
-
-</div>
-
-<div class='page'></div>
-
-<div class='page'></div>
+<main>
+  <section class="page stay" id='page1'>
+    <span class='title' id='title'>I'm a <span class='color'>dev</span>, that<span class='subtitle hide-display'
+        id='sub1'>'s it sadly</span><span class='subtitle' id='sub2'>...</span>
+    </span>
+  
+    <img id='img' src="https://bewu.dev/assets/pfp/pfp-neon.webp">
+  
+    <div class="hide" id='socials'>
+      <a href="https://discord.com/users/548533107914047491" title="bewu#0764" rel="noreferrer" target="_blank">
+        <img src="https://raw.githubusercontent.com/bewuwy/bewuwy/main/assets/icons/discord.svg" alt="Discord"></a>
+  
+      <a href="https://github.com/bewuwy" title="bewuwy" rel="noreferrer" target="_blank">
+        <img src="https://raw.githubusercontent.com/bewuwy/bewuwy/main/assets/icons/github.svg" alt="Github"></a>
+  
+      <a href="https://www.youtube.com/channel/UCtu5KoWQvYRerzfRT5YYLlw/" title="bewuwy" rel="noreferrer" target="_blank">
+        <img src="https://raw.githubusercontent.com/bewuwy/bewuwy/main/assets/icons/yt.svg" alt="YouTube"></a>
+  
+      <a href="https://steamcommunity.com/id/bewuwy/" title="bewu" rel="noreferrer" target="_blank">
+        <img src="https://raw.githubusercontent.com/bewuwy/bewuwy/main/assets/icons/steam.svg" alt="Steam"></a>
+  
+      <a href="https://mine.ly/b3wu.1" title="b3wu" rel="noreferrer" target="_blank">
+        <img src="https://raw.githubusercontent.com/bewuwy/bewuwy/main/assets/icons/mc.svg" alt="Minecraft"></a>
+    </div>
+  
+    <div id="arrow">
+      <span>scroll down</span>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+        <!-- Font Awesome Pro 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
+        <path fill='white'
+          d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z" />
+      </svg>
+    </div>
+  </section>
+  
+  <section class='page'></section>
+  
+  <section class='page'></section>
+</main>
