--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ head_include: head_index.html
 
 <main>
   <section class="page stay" id='page1'>
-    <span class='title' id='title'>I'm a <span class='color'>dev</span>, that<span class='subtitle hide-display'
+    <span class='title' id='title'>I'm a<br><span class='color'>dev</span>,<br>that<span class='subtitle hide-display'
         id='sub1'>'s it sadly</span><span class='subtitle' id='sub2'>...</span>
     </span>
   
