cleaned up index code

--- a/index.html
+++ b/index.html
@@ -11,26 +11,27 @@ head_include: head_index.html
     <span class='title' id='title'>I'm a<br><span class='color'>dev</span>,<br>that<span class='subtitle hide-display'
         id='sub1'>'s it sadly</span><span class='subtitle' id='sub2'>...</span>
     </span>
-  
+
     <img id='img' src="https://bewu.dev/assets/pfp/pfp-neon.webp">
-  
-    <div class="hide" id='socials'>
+
+    <div class="hide" id='iconbox'>
       <a href="https://discord.com/users/548533107914047491" title="bewu#0764" rel="noreferrer" target="_blank">
         <img src="https://raw.githubusercontent.com/bewuwy/bewuwy/main/assets/icons/discord.svg" alt="Discord"></a>
-  
+
       <a href="https://github.com/bewuwy" title="bewuwy" rel="noreferrer" target="_blank">
         <img src="https://raw.githubusercontent.com/bewuwy/bewuwy/main/assets/icons/github.svg" alt="Github"></a>
-  
-      <a href="https://www.youtube.com/channel/UCtu5KoWQvYRerzfRT5YYLlw/" title="bewuwy" rel="noreferrer" target="_blank">
+
+      <a href="https://www.youtube.com/channel/UCtu5KoWQvYRerzfRT5YYLlw/" title="bewuwy" rel="noreferrer"
+        target="_blank">
         <img src="https://raw.githubusercontent.com/bewuwy/bewuwy/main/assets/icons/yt.svg" alt="YouTube"></a>
-  
+
       <a href="https://steamcommunity.com/id/bewuwy/" title="bewu" rel="noreferrer" target="_blank">
         <img src="https://raw.githubusercontent.com/bewuwy/bewuwy/main/assets/icons/steam.svg" alt="Steam"></a>
-  
+
       <a href="https://mine.ly/b3wu.1" title="b3wu" rel="noreferrer" target="_blank">
         <img src="https://raw.githubusercontent.com/bewuwy/bewuwy/main/assets/icons/mc.svg" alt="Minecraft"></a>
     </div>
-  
+
     <div id="arrow">
       <span>scroll down</span>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
@@ -40,8 +41,8 @@ head_include: head_index.html
       </svg>
     </div>
   </section>
-  
+
   <section class='page'></section>
-  
+
   <section class='page'></section>
 </main>
