--- a/index.html
+++ b/index.html
@@ -1,55 +1,48 @@
 ---
 layout: default
 title: bewu.dev
-description: hej, jestem bewu aka bewuwy, jestem komputerświrem. no, i to jest moja strona bewu.dev
-head_include: script_index.html
+description: bewu
+head_include: head_index.html
 ---
 
-{% include nav.html %}
-<div class="center">
-  <img src="/assets/pfp/pfp-neon.webp" class="pfp" id="pfp" alt="bewu icon"><br>
-  <a id="caption" style="color: white; display: inline-block;"><h1>bewu</h1></a>
-  <script>
-    $("#pfp").hover(function() {
-      $("#pfp").addClass("jump");
-    },
-    function() {
-      $("#pfp").removeClass("jump");
-    })
 
-    $("#pfp").click(function() {
-      $('#pfp').addClass('flip');
-      setTimeout(function() {$('#pfp').removeClass('flip');}, 910);
-    });
+<main>
+  <section class="page stay" id='page1'>
+    <span class='title' id='title'>I'm a<br><span class='color'>dev</span>,<br>that<span class='subtitle hide-display'
+        id='sub1'>'s it sadly</span><span class='subtitle' id='sub2'>...</span>
+    </span>
 
-    $("#caption").click(function() {
-      function randomInRange(min, max) {
-        return Math.random() * (max - min) + min;
-      }
+    <img id='img' src="https://bewu.dev/assets/pfp/pfp-neon.webp">
 
-      confetti({
-        angle: randomInRange(55, 125),
-        spread: randomInRange(50, 70),
-        particleCount: randomInRange(50, 150),
-        origin: { y: 0.6 }
-      });
-    })
-  </script>
+    <div class="hide" id='iconbox'>
+      <a href="https://discord.com/users/548533107914047491" title="bewu#0764" rel="noreferrer" target="_blank">
+        <img src="https://raw.githubusercontent.com/bewuwy/bewuwy/main/assets/icons/discord.svg" alt="Discord"></a>
 
-  <div class="iconbox">
-    <a href="https://discord.com/users/548533107914047491" title="bewu#0764" rel="noreferrer" target="_blank">
-    <img src="assets/icons/discord.svg" alt="Discord"></a>
+      <a href="https://github.com/bewuwy" title="bewuwy" rel="noreferrer" target="_blank">
+        <img src="https://raw.githubusercontent.com/bewuwy/bewuwy/main/assets/icons/github.svg" alt="Github"></a>
 
-    <a href="https://github.com/bewuwy" title="bewuwy" rel="noreferrer" target="_blank">
-    <img src="assets/icons/github.svg" alt="Github"></a>
+      <a href="https://www.youtube.com/channel/UCtu5KoWQvYRerzfRT5YYLlw/" title="bewuwy" rel="noreferrer"
+        target="_blank">
+        <img src="https://raw.githubusercontent.com/bewuwy/bewuwy/main/assets/icons/yt.svg" alt="YouTube"></a>
 
-    <a href="https://www.youtube.com/channel/UCtu5KoWQvYRerzfRT5YYLlw/" title="bewuwy" rel="noreferrer" target="_blank">
-    <img src="assets/icons/yt.svg" alt="YouTube"></a>
+      <a href="https://steamcommunity.com/id/bewuwy/" title="bewu" rel="noreferrer" target="_blank">
+        <img src="https://raw.githubusercontent.com/bewuwy/bewuwy/main/assets/icons/steam.svg" alt="Steam"></a>
 
-    <a href="https://steamcommunity.com/id/bewuwy/" title="bewu" rel="noreferrer" target="_blank">
-    <img src="assets/icons/steam.svg" alt="Steam"></a>
+      <a href="https://mine.ly/b3wu.1" title="b3wu" rel="noreferrer" target="_blank">
+        <img src="https://raw.githubusercontent.com/bewuwy/bewuwy/main/assets/icons/mc.svg" alt="Minecraft"></a>
+    </div>
 
-    <a href="https://mine.ly/b3wu.1" title="b3wu" rel="noreferrer" target="_blank">
-    <img src="assets/icons/mc.svg" alt="Minecraft"></a>
-  </div>
-</div>
+    <div id="arrow">
+      <span>scroll down</span>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+        <!-- Font Awesome Pro 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
+        <path fill='white'
+          d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z" />
+      </svg>
+    </div>
+  </section>
+
+  <section class='page'></section>
+
+  <section class='page'></section>
+</main>
